[3project-readme] Victor

--- a/Mapa.ipynb
+++ b/Mapa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f3319f8e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "915b8e76",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b3c518d0",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "1         2  -3.661894  40.429125"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9d4b5822",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "374b7006",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "1         2  -3.661894  40.429125  [-3.661894127260325, 40.42912477276823]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "4cf4c2cd",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "03468ab7",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_a5d0e391c64d8b4a2f9f4921af54952d {\n",
+       "                #map_8211be781fcfe0478c58873cc1a4dc7c {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -260,13 +260,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_a5d0e391c64d8b4a2f9f4921af54952d&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8211be781fcfe0478c58873cc1a4dc7c&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_a5d0e391c64d8b4a2f9f4921af54952d = L.map(\n",
-       "                &quot;map_a5d0e391c64d8b4a2f9f4921af54952d&quot;,\n",
+       "            var map_8211be781fcfe0478c58873cc1a4dc7c = L.map(\n",
+       "                &quot;map_8211be781fcfe0478c58873cc1a4dc7c&quot;,\n",
        "                {\n",
        "                    center: [0.0, 0.0],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -280,61 +280,61 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_7a6fd0a158c1b46a73fe1ebe6e1f8bdc = L.tileLayer(\n",
+       "            var tile_layer_175dd44a62dca93f5010bed65e89f237 = L.tileLayer(\n",
        "                &quot;https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Map tiles by \\u003ca href=\\&quot;http://stamen.com\\&quot;\\u003eStamen Design\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://creativecommons.org/licenses/by/3.0\\&quot;\\u003eCC BY 3.0\\u003c/a\\u003e. Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_a5d0e391c64d8b4a2f9f4921af54952d);\n",
+       "            ).addTo(map_8211be781fcfe0478c58873cc1a4dc7c);\n",
        "        \n",
        "    \n",
-       "            var marker_825be1371d05fcc2686c92dedaf0efb5 = L.marker(\n",
+       "            var marker_39a8b835dc94c3b2678aaa0b81e2eee1 = L.marker(\n",
        "                [40.4203765, -3.668627],\n",
        "                {&quot;radius&quot;: 2}\n",
-       "            ).addTo(map_a5d0e391c64d8b4a2f9f4921af54952d);\n",
+       "            ).addTo(map_8211be781fcfe0478c58873cc1a4dc7c);\n",
        "        \n",
        "    \n",
-       "            var icon_3ce07f8980af7e903881c06fbc612220 = L.AwesomeMarkers.icon(\n",
+       "            var icon_e97948aadb4fa9e04e8b443e842ffeee = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_825be1371d05fcc2686c92dedaf0efb5.setIcon(icon_3ce07f8980af7e903881c06fbc612220);\n",
+       "            marker_39a8b835dc94c3b2678aaa0b81e2eee1.setIcon(icon_e97948aadb4fa9e04e8b443e842ffeee);\n",
        "        \n",
        "    \n",
-       "        var popup_0727584c0541fe105b6340c9c7de754c = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_40c5ccee633da67d3794c197eb8e7de4 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_5997b952a60d99777eb5ed2d30a69c16 = $(`&lt;div id=&quot;html_5997b952a60d99777eb5ed2d30a69c16&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;1&lt;/div&gt;`)[0];\n",
-       "                popup_0727584c0541fe105b6340c9c7de754c.setContent(html_5997b952a60d99777eb5ed2d30a69c16);\n",
+       "                var html_df39e5e70c0cfab096342b1a3da46eb8 = $(`&lt;div id=&quot;html_df39e5e70c0cfab096342b1a3da46eb8&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;1&lt;/div&gt;`)[0];\n",
+       "                popup_40c5ccee633da67d3794c197eb8e7de4.setContent(html_df39e5e70c0cfab096342b1a3da46eb8);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_825be1371d05fcc2686c92dedaf0efb5.bindPopup(popup_0727584c0541fe105b6340c9c7de754c)\n",
+       "        marker_39a8b835dc94c3b2678aaa0b81e2eee1.bindPopup(popup_40c5ccee633da67d3794c197eb8e7de4)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_dcdcb186cd061b29ab3b2e677234ee27 = L.marker(\n",
+       "            var marker_2908ebf0831332c2f432ed25e876ad8c = L.marker(\n",
        "                [40.42912477276823, -3.661894127260325],\n",
        "                {&quot;radius&quot;: 2}\n",
-       "            ).addTo(map_a5d0e391c64d8b4a2f9f4921af54952d);\n",
+       "            ).addTo(map_8211be781fcfe0478c58873cc1a4dc7c);\n",
        "        \n",
        "    \n",
-       "            var icon_268e44f3cecefc6858396182c3671ba9 = L.AwesomeMarkers.icon(\n",
+       "            var icon_bda7563d56e27db5965ec2fc1383f7f4 = L.AwesomeMarkers.icon(\n",
        "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;blue&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
        "            );\n",
-       "            marker_dcdcb186cd061b29ab3b2e677234ee27.setIcon(icon_268e44f3cecefc6858396182c3671ba9);\n",
+       "            marker_2908ebf0831332c2f432ed25e876ad8c.setIcon(icon_bda7563d56e27db5965ec2fc1383f7f4);\n",
        "        \n",
        "    \n",
-       "        var popup_b8916b90466f6b1b6a7163d8422fae40 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_ad481b3e5a8bbaad7ac61bf6527f8930 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_06c3a09efc2c7396e261f1441fe3aac4 = $(`&lt;div id=&quot;html_06c3a09efc2c7396e261f1441fe3aac4&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;2&lt;/div&gt;`)[0];\n",
-       "                popup_b8916b90466f6b1b6a7163d8422fae40.setContent(html_06c3a09efc2c7396e261f1441fe3aac4);\n",
+       "                var html_c30148d192138c4b913b93b686837c61 = $(`&lt;div id=&quot;html_c30148d192138c4b913b93b686837c61&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;2&lt;/div&gt;`)[0];\n",
+       "                popup_ad481b3e5a8bbaad7ac61bf6527f8930.setContent(html_c30148d192138c4b913b93b686837c61);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_dcdcb186cd061b29ab3b2e677234ee27.bindPopup(popup_b8916b90466f6b1b6a7163d8422fae40)\n",
+       "        marker_2908ebf0831332c2f432ed25e876ad8c.bindPopup(popup_ad481b3e5a8bbaad7ac61bf6527f8930)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -342,10 +342,10 @@
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1a60e857a30>"
+       "<folium.folium.Map at 0x22f7b3a7820>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
